<?xml version="1.0"?>
<package format="3">
  <name>mpc-interface</name>
  <version>0.0.0</version>
  <description>A fast and flexible formulation of QP Probl</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Nahuel Villa</author>
  <license>BSD</license>

  <url type="website">https://github.com/gepetto/mpc-interface</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>eigen</depend>
  <depend>boost</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
