MACRO(ADD_QP_FORMULATIONS_UNIT_TEST NAME)
  SET(TEST_NAME "test-cpp-${NAME}")
  ADD_UNIT_TEST(${TEST_NAME} ${NAME}.cpp)
  TARGET_LINK_LIBRARIES(${TEST_NAME} PRIVATE
    ${PROJECT_NAME} Boost::unit_test_framework)
  TARGET_COMPILE_OPTIONS(${TEST_NAME} PRIVATE
    "-DBOOST_TEST_DYN_LINK" "-DBOOST_TEST_MODULE=${MODULE_NAME}")
ENDMACRO(ADD_QP_FORMULATIONS_UNIT_TEST)

ADD_QP_FORMULATIONS_UNIT_TEST(tools)
